fixed the look of the app on mobile

--- a/src/app/trail-info/trail-info.component.scss
+++ b/src/app/trail-info/trail-info.component.scss
@@ -1,14 +1,17 @@
 mat-card {
-    margin: 1em;
+    margin: 2em;
+    padding: 3em;
 }
 
 mat-checkbox {
     margin-right: 1em;
 }
 
-.big-pic {
-    width: 70%;
-    margin: 2em auto;
+.big-pic-container {
+    width: 100%;
+    height: 30em;
+    overflow: hidden;
+    margin: 3em 0;
 }
 
 .summary {
@@ -48,4 +51,20 @@ mat-checkbox {
 
 .content {
     display: flex;
+}
+
+@media only screen and (max-width: 600px) {
+    .weather {
+      flex-direction: column;
+    }
+    .content {
+        flex-direction: column;
+    }
+    .big-pic-container {
+        height: 10em;
+    }
+    mat-card {
+        margin: .5em;
+        padding: 1em;
+    }
 }
